--- a/about.html
+++ b/about.html
@@ -6,6 +6,12 @@
   <title>About HTML</title>
 </head>
 <body>
+  <h2>
+    About HTML
+  </h2>
+  <p>
+    HTML stands for HyperText Markup Language. It is the standard markup language for creating web pages. HTML describes the structure of a document, including the elements that form the content, the document's title, links, images, and more.
+  </p>
   
 </body>
 </html>
