index & about Header Modified

--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <h1>hello world</h1>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus optio voluptate earum assumenda libero. Vel rerum repellat earum molestiae quos ratione doloremque a eligendi voluptatibus expedita itaque, laboriosam, aperiam velit.</p>
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-  <a href="#">Learn more</a>
-  <a href="#">More info</a>
+  <header>
+    <h1>hello world</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus optio voluptate earum assumenda libero. Vel
+      rerum repellat earum molestiae quos ratione doloremque a eligendi voluptatibus expedita itaque, laboriosam,
+      aperiam
+      velit.</p>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <a href="#">Learn more</a>
+    <a href="#">More info</a>
+  </header>
 </body>
+
 </html>
