--- a/about.html
+++ b/about.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About HTML</title>
 </head>
+
 <body>
-  <h2>
-    About HTML
-  </h2>
-  <p>
-    HTML stands for HyperText Markup Language. It is the standard markup language for creating web pages. HTML describes the structure of a document, including the elements that form the content, the document's title, links, images, and more.
-  </p>
-  
+  <section>
+    <div class="container">
+      <h2>
+        About HTML
+      </h2>
+      <p>
+        HTML stands for HyperText Markup Language. It is the standard markup language for creating web pages. HTML
+        describes
+        the structure of a document, including the elements that form the content, the document's title, links, images,
+        and
+        more.
+      </p>
+    </div>
+  </section>
 </body>
 </html>
